--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Esplora Siti di Cucina</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body bgcolor = "244321">
- nigga boy
- ddfdfsfds
+
+<body>
+    <header>
+        <h1>Esplora il Mondo della Cucina</h1>
+    </header>
+    <main>
+        <div class="site-links">
+            <a href="https://ricette.giallozafferano.it/Bistecca-alla-fiorentina.html" target="_blank" class="site-link">
+                <img src="https://www.giallozafferano.it/images/257-25714/Bistecca-alla-fiorentina_450x300.jpg" alt="">
+                <h2>carne fiorentina</h2>
+                <p>Scopri ricette deliziose e consigli culinari.</p>
+            </a>
+            <a href="https://ricette.giallozafferano.it/Lasagne-alla-Bolognese.html" target="_blank" class="site-link">
+                <img src="https://www.giallozafferano.it/images/229-22941/Lasagne-alla-Bolognese_450x300.jpg" alt="">
+                <h2>lasagna</h2>
+                <p>Esplora piatti tradizionali e innovative creazioni.</p>
+            </a>
+            <a href="https://ricette.giallozafferano.it/Polpettone-al-forno.html" target="_blank" class="site-link">
+                <img src="https://www.giallozafferano.it/images/188-18879/Polpettone-al-forno_450x300.jpg" alt="">
+                <h2>polpettone al forno</h2>
+                <p>Ricette salutari e idee per una cucina bilanciata.</p>
+            </a>
+            <a href="https://ricette.giallozafferano.it/Spaghetti-all-Amatriciana.html" target="_blank" class="site-link">
+              <img src="https://www.giallozafferano.it/images/245-24560/Spaghetti-all-Amatriciana_450x300.jpg" alt="">
+                <h2>amatriciana</h2>
+                <p>amatriciana classica ma gustosa come sempre</p>
+            </a>
+            <a href="https://ricette.giallozafferano.it/Insalata-russa.html" target="_blank" class="site-link">
+                <img src="https://www.giallozafferano.it/images/237-23788/Insalata-russa_450x300.jpg" alt="">
+                <h2>insalata russa</h2>
+                <p>Esperienze gastronomiche uniche e viaggi culinari.</p>
+            </a>
+            <a href="https://ricette.giallozafferano.it/Spaghetti-alla-Carbonara.html" target="_blank" class="site-link">
+                <img src="https://www.giallozafferano.it/images/244-24489/Spaghetti-alla-Carbonara_450x300_sp.jpg" alt="">
+                <h2>carbonara</h2>
+                <p>Le ultime tendenze in cucina e sperimentazioni creative.</p>
+            </a>
+        </div>
+    </main>
 </body>
+
 </html>
