--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esplora Siti di Cucina</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text.js" src="text.js"></script>
 </head>
 
 <body>
