--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Esplora il Mondo della Cucina</h1>
+        <h1>Esplora il Mondo della Cucina</h1> <a href="login.html">Login</a>
     </header>
     <main>
         <div class="site-links">
